https://bugs.webkit.org/show_bug.cgi?id=93693 [WK2] REGRESSION(125091): pixel results don't sow scrollbars anymore

Reviewed by Sam Weinig.

Source/WebCore:

This is a regression from http://trac.webkit.org/changeset/125091
in which I failed to noticed that
WKBundlePageCreateSnapshotInViewCoordinates() did actually do
something different than
WKBundlePageCreateSnapshotInDocumentCoordinates(). Specifically,
it used ScrollView::paint() to paint instead of
FrameView::paintContents(). So this patch restores that
functionality by adding a value to SnapshotOptions indicating
whether the snapshot should be taken in ViewCoordinates
(otherwise it defaults to DocumentCoordinates).

FrameView:: paintContentsForSnapshot() now takes a new parameter
that indicates whether to take the snapshot in document
coordinates or view coordinates.
* WebCore.exp.in:
* page/FrameView.cpp:
(WebCore::FrameView::paintContentsForSnapshot):
* page/FrameView.h:

Source/WebKit2:

This is a regression from http://trac.webkit.org/changeset/125091
in which I failed to noticed that
WKBundlePageCreateSnapshotInViewCoordinates() did actually do
something different than
WKBundlePageCreateSnapshotInDocumentCoordinates(). Specifically,
it used ScrollView::paint() to paint instead of
FrameView::paintContents(). So this patch restores that
functionality by adding a value to SnapshotOptions indicating
whether the snapshot should be taken in ViewCoordinates
(otherwise it defaults to DocumentCoordinates).

* Shared/API/c/WKImage.h:
* Shared/API/c/WKSharedAPICast.h:
(WebKit::toSnapshotOptions):
* Shared/ImageOptions.h:
* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::scaledSnapshotWithOptions):

Even though we plan to deprecate this API, it should keep doing
the right thing until it's gone.
* WebProcess/InjectedBundle/API/c/WKBundlePage.cpp:
(WKBundlePageCreateSnapshotInViewCoordinates):

Tools:

Use new API WKBundlePageCreateSnapshotWithOptions().
* WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp:
(WTR::InjectedBundlePage::dump):



Canonical link: https://commits.webkit.org/111958@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125700 268f45cc-cd09-0410-ab3c-d52691b4dbfc